# libxp

./: .cvsignore  .gitignore  COPYING  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  xp.pc.in
debian/: changelog  control  copyright  libxp-dev.install  libxp6.install  rules  watch
man/: Makefile.am  Makefile.in  XpCancelDoc.man  XpCancelJob.man  XpCancelPage.man  XpCreateContext.man  XpDestroyContext.man  XpEndDoc.man  XpEndJob.man  XpEndPage.man  XpFreePrinterList.man  XpGetAttributes.man  XpGetContext.man  XpGetDocumentData.man  XpGetImageResolution.man  XpGetLocaleHinter.man  XpGetOneAttribute.man  XpGetPageDimensions.man  XpGetPdmStartParams.man  XpGetPrinterList.man  XpGetScreenOfContext.man  XpInputSelected.man  XpPutDocumentData.man  XpQueryExtension.man  XpQueryScreens.man  XpQueryVersion.man  XpRehashPrinterList.man  XpSelectInput.man  XpSetAttributes.man  XpSetContext.man  XpSetImageResolution.man  XpSetLocaleHinter.man  XpStartDoc.man  XpStartJob.man  XpStartPage.man  libXp.man
src/: .gitignore  Makefile.am  Makefile.in  XpAttr.c  XpContext.c  XpDoc.c  XpExtUtil.c  XpExtUtil.h  XpExtVer.c  XpGetData.c  XpImageRes.c  XpInput.c  XpJob.c  XpLocale.c  XpNotifyPdm.c  XpPage.c  XpPageDim.c  XpPrinter.c  XpPutData.c  XpScreens.c
